# maestro

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md
.github/workflows/: ci.yml
configs/data/: toy.yaml  vertex_singlepulse.yaml
configs/model/: foundation_small.yaml  generator_small.yaml
configs/train/: eval_smoke.yaml
docs/: data-governance.md  getting-started.md
docs/adr/: 0000-template.md  0001-two-component-architecture.md
docs/architecture/: overview.md
notebooks/: interp_example.py
scripts/: run_v0_pipeline.sh
simulators/vertex/: README.md
simulators/vertex/bsfModel copy/: bsf_recording.m  bsf_simulation.m  bsf_tissue.m
simulators/vertex/catVisModel/: cvc_noiseloop.m  cvc_recording.m  cvc_simulation.m  cvc_tissue.m
simulators/vertex/deepbrain/: CHANGES-DEEPBRAIN.md  run_vertex_export.m
simulators/vertex/vertexTutorials/: tutorial_5.m
simulators/vertex/vertex_janrit/: sigm.m
src/maestro/: __init__.py
src/maestro/cli/: __init__.py  main.py
src/maestro/data/: __init__.py  io.py  schema.py  tensors.py
src/maestro/eval/: __init__.py  metrics.py
src/maestro/foundation/: __init__.py  model.py
src/maestro/generator/: __init__.py  flow_matching.py
src/maestro/interp/: __init__.py  lens.py
src/maestro/simulators/: __init__.py  analytic.py  (+2 more)
tests/: conftest.py
tests/integration/: test_encoder_dataset.py
tests/unit/: test_analytic_simulator.py  test_io_roundtrip.py  test_metrics.py  test_schema.py
(+48 files in other folders)
