[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.1.0"
description = "A foundation model for predicting neurostimulation outcomes (DeepBrain Research)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DeepBrain Research" }]
keywords = ["neurostimulation", "foundation-model", "flow-matching", "interpretability"]
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
# training / ML stack, kept separate so the package imports without a GPU toolchain
train = [
  "torch>=2.2",
]
# reading VERTEX .mat outputs and misc science io
sci = [
  "scipy>=1.10",
  "h5py>=3.9",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
maestro = "maestro.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "SLF"]
ignore = ["N802"]  # we use factory functions that read like classes

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
files = ["src/maestro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
